# known

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  IMPROVEMENTS.md  IMPROVING_COVERAGE.md  LESSONS_LEARNED.md  README.md  REFACTORS.md  ROADMAP.md  TEST_COVERAGE.md  justfile
.claude/: settings.json
.claude/commands/: coverage.md  implement.md  reevaluate.md  refactor.md
.gemini/: settings.json
.github/workflows/: coverage.yml
src/: agents.rs  autostart.rs  config.rs  constants.rs  daemon.rs  lib.rs  main.rs  single_instance.rs  symlinks.rs
src/config/: io.rs  mod.rs  path.rs  structure.rs
src/daemon/: config_event.rs  config_handler.rs  events.rs  file_event.rs  mod.rs  symlinks.rs  watchers.rs
src/single_instance/: lock.rs  mod.rs  path.rs  process.rs  stop.rs
tests/: cli.rs  cross_platform.rs  daemon.rs
