[package]
name = "known"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "known"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
notify = "6.1"
auto-launch = "0.5"
nix = { version = "0.29", features = ["process", "signal", "fs"] }
directories = "6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tempfile = "3.8"
assert_cmd = "2.0"
predicates = "3.1"

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ["cfg(ci)"] }
